drop some parts of code which moved to own plugin